--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,13 +68,15 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Blog</a>
+                <a class="nav-link" href="{{ site.baseurl }}/index.html">文章總覽</a>
                 </li>
-
+                </li>
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
+                <a class="nav-link" href="{{ site.baseurl }}/categories">文章分類</a>
                 </li>
-
+                <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/about">關於我</a>
+              
                 {% include search-lunr.html %}
 
             </ul>
